force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AdditionalInstructionCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AdditionalInstructionCode__c</fullName>
    <label>Additional Instruction Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>