force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AdditionalInstructionLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AdditionalInstructionLabel__c</fullName>
    <label>Additional Instruction Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>