force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AdditionalInstructionSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AdditionalInstructionSystem__c</fullName>
    <label>Additional Instruction System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>