force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AsNeededCode__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AsNeededCode__c</fullName>
    <description>AsNeeded Symbol in syntax defined by the system</description>
    <label>AsNeeded Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>