force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AsNeededLabel__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AsNeededLabel__c</fullName>
    <label>As Needed Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>