force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__AsNeededSystem__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__AsNeededSystem__c</fullName>
    <description>Identity of the terminology system</description>
    <label>AsNeeded System</label>
    <length>255</length>
    <type>Text</type>
</CustomField>