force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__DoseQuantityUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__DoseQuantityUnit__c</fullName>
    <label>Dose Quantity Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>