force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__EhrPatient__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__EhrPatient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Patient this applies to</description>
    <inlineHelpText>Patient this applies to</inlineHelpText>
    <label>EHR Patient</label>
    <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
    <relationshipLabel>EHR Dosage Instructions</relationshipLabel>
    <relationshipName>EhrDosageInstructions</relationshipName>
    <type>Lookup</type>
</CustomField>