force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__Instruction__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Instruction__c</fullName>
    <label>Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>