force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__MaxDosePerPeriodDenominatorUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MaxDosePerPeriodDenominatorUnit__c</fullName>
    <label>Max Dose Per Period Denominator Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>