force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__MaxDosePerPeriodDenominatorValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MaxDosePerPeriodDenominatorValue__c</fullName>
    <label>Max Dose Per Period Denominator Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>