force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__MaxDosePerPeriodNumeratorUnit__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MaxDosePerPeriodNumeratorUnit__c</fullName>
    <label>Max Dose Per Period Numerator Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>