force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__MaxDosePerPeriodNumeratorValue__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__MaxDosePerPeriodNumeratorValue__c</fullName>
    <label>Max Dose Per Period Numerator Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>