force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__SupplementalInstruction__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__SupplementalInstruction__c</fullName>
    <label>Supplemental Instruction</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>