force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__Timing__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Timing__c</fullName>
    <label>Timing</label>
    <type>DateTime</type>
</CustomField>