force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__TimingPeriodEnd__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TimingPeriodEnd__c</fullName>
    <label>Timing Period End</label>
    <type>DateTime</type>
</CustomField>