force-app/main/default/objects/HealthCloudGA__EhrDosageInstruction__c/fields/HealthCloudGA__TimingPeriodStart__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TimingPeriodStart__c</fullName>
    <label>Timing Period Start</label>
    <type>DateTime</type>
</CustomField>